--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "nyxtools" %}
-{% set version = "0.0.2" %}
+{% set version = "0.0.3" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/nyxtools-{{ version }}.tar.gz
-  sha256: bd9bc09630d87ed6f020b0818b7ba63edf8d214395762364cdd9388fbf67b1aa
+  sha256: 5240802d55fcb7f2f7f31037e80bd8ddf9bbafc470a853aa9e7f7fcab9857d65
 
 build:
   number: 0
@@ -20,6 +20,7 @@ requirements:
     - pip
   run:
     - python >=3.7
+    - area-detector-handlers
     - mxtools
 
 test:
