manually add tiled requirement
 * not sure why it isn't being picked up from mxtools

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,10 @@ requirements:
     - area-detector-handlers
     - mxtools
     - fabio
+    - tiled
+    # TODO: remove tiled once databroker has tiled as a dependency for
+    # databroker > 2.0.0b4 - copied from mxtools
+
 
 test:
   imports:
