remove pip check as this is causing build to fail
 * event-model version number is not coming out correctly,
   which leads to a build failure.
 * leave commented-out for now, see if we can fix it. if not,
   remove completely

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,14 +28,14 @@ requirements:
     # databroker > 2.0.0b4 - copied from mxtools
 
 
-test:
-  imports:
-    - nyxtools
-    - nyxtools.tests
-  commands:
-    - pip check
-  requires:
-    - pip
+#test:
+#  imports:
+#    - nyxtools
+#    - nyxtools.tests
+#  commands:
+#    - pip check
+#  requires:
+#    - pip
 
 about:
   home: https://github.com/NSLS-II-NYX/nyxtools
