add back some tests
 * tests are required for conda-forge

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,10 +28,10 @@ requirements:
     # databroker > 2.0.0b4 - copied from mxtools
 
 
-#test:
-#  imports:
-#    - nyxtools
-#    - nyxtools.tests
+test:
+  imports:
+    - nyxtools
+    - nyxtools.tests
 #  commands:
 #    - pip check
 #  requires:
